PR #805を1.20.1 / Forge向けに補正
Forge 47.4.10、GeckoLib 4.8.3、1.20.1のresource形式へ適合させる。

PR #810相当のEpic Fight GameTest用ServerPlayer補正も1.20.1 APIで反映する。